# ya_python_xbrl

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  run_test_integrated.sh  run_test_on_debian.sh  setup.cfg  setup.py  test_integrated.py  test_unit.py  tox.ini  xbrl_parser.py
.github/workflows/: ci.yml
examples/: xbrl2json.py
tests/: test_unit.py
ya_python_xbrl/: __init__.py  xbrl_ast.py  xbrl_parser.py
