[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ya_python_xbrl"
version = "0.1.0"
authors = [{name="yosukesan"},] 
description = "Yet another xbrl parser"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
"Homepage" = "https://github.com/yosukesan/ya_python_xbrl"
