[metadata]
name = ya_python_xbrl
version = 0.1.0  
description = rst_description
author = Yosuke OTSUKI
license = AGPLv3
author_email = y.otsuki30@gmail.com
url = https://github.com/yosukesan

[options]
python_requires = >= 3.6

# bin/
#packages =

# lib/
py_modules =
  ya_xbrl    

# source codes
scripts =
  xbrl_ast.py
  xbrl_parser.py
